Create new Settings and Users (Create basic markup, Adapt to UI design and Create basic service and intearct with it).

--- a/src/pages/settings/settings.page.scss
+++ b/src/pages/settings/settings.page.scss
@@ -29,7 +29,15 @@ page-settings {
     font-size: 4rem;
   }
 
+  .item-md.item-input.ng-valid.input-has-value:not(.input-has-focus) .item-inner {
+    border-bottom-color: map-get($colors, primary);
+    box-shadow: inset 0 -1px 0 0 map-get($colors, primary);
+  }
 
-
+  .color-light {
+    * {
+      color: map-get($colors, light);
+    }
+  }
 
 }
