--- a/src/pages/users/users.page.scss
+++ b/src/pages/users/users.page.scss
@@ -1,6 +1,13 @@
 page-users {
-  ion-navbar {
-    text-align: center;
+  .item-md.item-input.ng-valid.input-has-value:not(.input-has-focus) .item-inner {
+    border-bottom-color: map-get($colors, primary);
+    box-shadow: inset 0 -1px 0 0 map-get($colors, primary);
+  }
+
+  .color-light {
+    * {
+      color: map-get($colors, light);
+    }
   }
 
 }
