--- a/src/pages/accounts/accounts.page.scss
+++ b/src/pages/accounts/accounts.page.scss
@@ -1,5 +1,9 @@
 page-accounts {
 
+  /*ion-list.list {
+    min-height: calc(100% - 96px);
+  }*/
+
   ion-item.item-block {
     box-sizing: content-box;
   }
