--- a/src/pages/repositories/repositories.page.scss
+++ b/src/pages/repositories/repositories.page.scss
@@ -1,5 +1,9 @@
 page-repositories {
-  .item-content {
+  /*ion-list.list {
+    min-height: calc(100% - 96px);
+  }*/
+
+  item-content {
 
     .setting-info-container {
       .icon {
