fixed error users and accounts, refactor code and button add/delete collaborator fixed.

--- a/src/pages/accounts/accounts.page.scss
+++ b/src/pages/accounts/accounts.page.scss
@@ -1,9 +1,4 @@
 page-accounts {
-
-  /*ion-list.list {
-    min-height: calc(100% - 96px);
-  }*/
-
   ion-item.item-block {
     box-sizing: content-box;
   }
@@ -23,5 +18,11 @@ page-accounts {
 
   .remove-account-button.item-button {
     font-size: 2.8rem;
+  }
+
+  .no-accounts-container {
+    margin-top: 1em;
+    text-align: center;
+    color: map-get($colors, light);
   }
 }
