--- a/src/pages/pull-requests/pull-requests.page.scss
+++ b/src/pages/pull-requests/pull-requests.page.scss
@@ -65,4 +65,10 @@ page-pull-requests {
       text-align: center;
     }
   }
+
+  .no-pull-request-container {
+    margin-top: 1em;
+    text-align: center;
+    color: map-get($colors, light);
+  }
 }
