Adapt to drupal backend (#1)
* Adapt to drupal backend (pull request)

* Adapt to drupal backend

* Adapt to drupal backend

* Deleted commits, comments and added repository name.

* Create new Settings and Users (Create basic markup, Adapt to UI design and Create basic service and intearct with it).

* New screens: repositories, users and collaborators.

* Add filtered and to check permissions.

* add checkbox and filter.

* changes to add or delete collaborators.

* Adapt to Drupal Backend (repositories and users).

* Adapt to Drupal Backend.

* Changed check to collaborator.

* Adapt to Drupal backend methods add and delete collaborator.

* Adapt to Drupal Backend collaborators.

* Adapt to Ionic 3

* Adapt to Ionic 3

* Adapt to size ion-list and changes in tokenServices.

* Fixed problem in login.

* Fixed filter collaborators.

* Refactor code.

* Refactor code.

* fixed error users and accounts, refactor code and button add/delete collaborator fixed.

* Update accounts.page.html

* Update collaborators.service.ts

* Update pull-requests.page.ts

* Update repositories.service.ts

* Update users.page.ts

--- a/src/pages/accounts/accounts.page.scss
+++ b/src/pages/accounts/accounts.page.scss
@@ -1,5 +1,4 @@
 page-accounts {
-
   ion-item.item-block {
     box-sizing: content-box;
   }
@@ -19,5 +18,11 @@ page-accounts {
 
   .remove-account-button.item-button {
     font-size: 2.8rem;
+  }
+
+  .no-accounts-container {
+    margin-top: 1em;
+    text-align: center;
+    color: map-get($colors, light);
   }
 }
