Fixed error getting account when you don't have any, added connector service and modified client_id and backend_url in constants.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -45,3 +45,9 @@ ion-list.list {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.no-elements-container {
+  margin-top: 1em;
+  text-align: center;
+  color: map-get($colors, light);
+}
